--- a/vision.css
+++ b/vision.css
@@ -131,7 +131,7 @@ input#help:checked + label {
   display: none;
   white-space: initial;
 }
-
+/* 
 input:checked + label + #helptext {
   background: green;
   display: block;
@@ -158,7 +158,58 @@ input[type="checkbox"] {
   &:checked + label.button {
     color:red;
   }
-}
+} */
+
+
+
+input[type="checkbox"].slider {
+
+  --offborder: #888;
+  --onborder: #55c;
+  --offslider: #ccc;
+  --onslider: #55c;
+  --offbg: #777;
+  --onbg: #ddd;
+  
+  appearance:none;
+  display:inline-block;
+  width: 3em;
+  height: 1.5em;
+  padding:0.5em;
+  line-height: 1em;
+  vertical-align: middle;
+  position:relative;
+  border: 0.1em solid var(--offborder);
+  border-radius: 1em;
+  background-color: var(--offbg);
+  transition: all 0.25s linear;
+  
+  &:checked {
+    border-color: var(--onborder);
+    background-color: var(--onbg);
+  }
+  
+  &::after {
+  content: "";
+  position:absolute;
+  display:block;
+  height: 1em;
+  width: 1em;
+  left:0.15em;
+  top: 50%;
+  transform: translate(0,-50%);
+  border-radius:1em;
+  background-color:var(--offslider);
+  transition: all 0.15s linear;
+  
+  }
+  
+  &:checked::after {
+  left:calc(100% - 1.15em);
+  background-color:var(--onslider);
+  }
+  
+  }
 
 label h2 {
   margin: 0.5em 0;
