--- a/vision.css
+++ b/vision.css
@@ -4,6 +4,7 @@
   --bg: #fff;
   --fg: #000;
   --ctrlbg: #ddf;
+  --highlight: #099;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -11,6 +12,7 @@
     --bg: #000;
     --fg: #fff;
     --ctrlbg: #222;
+    --highlight:#0ff;
   }
 }
 
@@ -25,8 +27,11 @@ body {
 }
 
 a {
-  font-size: 20pt;
+  font-size: inherit;
+  text-decoration: none;
+  color: #6495ed;
 }
+
 
 #main {
   position: relative;
@@ -70,6 +75,15 @@ a {
   border: solid 1px #888;
 }
 
+
+
+#ctrlbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 0.5em 0.5em;
+}
+
 #controls {
   position: absolute;
   /* height: 1.25em; */
@@ -77,15 +91,18 @@ a {
   line-height: 2em;
   background: transparent;
   padding: 0.5em;
-  transition: all 1.25s linear;
+  transition: all 0.25s linear;
   width: 10em;
   max-height: 1.25em;
-  white-space: nowrap;
+  /* white-space: nowrap; */
+  z-index: 105;
 }
 
 /* #controls >div {
   display:inline-block;
 } */
+
+
 
 #controls:hover {
   max-height: 15em;
@@ -95,11 +112,12 @@ a {
 }
 
 button#reload {
-  position: absolute;
-  top: 1em;
-  right: 1em;
-  padding: 0.25em 0.4em;
+  /* position: absolute; */
+  /* top: 1em; */
+  /* right: 1em; */
+  padding: 0.1em 0.4em;
   font-weight: bold;
+  height: 2em;
 }
 
 input {
