--- a/vision.css
+++ b/vision.css
@@ -6,7 +6,9 @@
   --ctrlbg: #222;
   --highlight: #0ff;
   --tranared: #880000;
-  --tranagreen: #008000;
+  --tranagreen: #00c;
+  --trackred: var(--fg);
+  --trackredbg: #ff0000;
   --homefilter: saturate(0) brightness(100);
 }
 
@@ -16,8 +18,10 @@
     --fg: #000;
     --ctrlbg: #ddf;
     --highlight: #099;
-    --tranared: #ff5500;
-    --tranagreen: aqua;
+    --tranared: #fc07;
+    --tranagreen: #0ff4;
+    --trackred: #f00;
+    --trackredbg: var(--bg);
     --homefilter: brightness(0);
   }
 }
@@ -27,8 +31,10 @@
   --fg: #000;
   --ctrlbg: #ddf;
   --highlight: #099;
-  --tranared: #ff5500;
-  --tranagreen: aqua;
+  --tranared: #fc07;
+  --tranagreen: #0ff4;
+  --trackred: #f00;
+  --trackredbg: var(--bg);
   --homefilter: brightness(0);
 }
 
@@ -97,28 +103,35 @@ a {
 }
 
 #controls {
-  position: absolute;
-  /* height: 1.25em; */
-  overflow: hidden;
-  line-height: 2em;
-  background: transparent;
-  padding: 0.5em;
-  transition: all 0.25s linear;
+  position: relative;
   width: min(25em, 90%);
-  /* width: 10em; */
-  max-height: 1.25em;
-  /* white-space: nowrap; */
-  z-index: 105;
+  line-height: 2em;
+  overflow:visible;
 }
 
-/* #controls >div {
-  display:inline-block;
-} */
+#settings {
+  cursor: default;
+}
 
-#controls:hover {
-  max-height: 15em;
+.ctrlbox {
+  position:absolute;
+  background: transparent;
+  transition: all 0.25s linear;
+  width: 100%;
+  height:auto;
+  /* white-space: nowrap; */
+  overflow: hidden;
+  z-index: 1005;
+  opacity: 0;
+  padding: 0.75em;
+  visibility: hidden;
+}
+
+#controls:hover .ctrlbox, .ctrlbox:hover {
   background: var(--ctrlbg);
   transition: all 0.25s linear;
+  opacity: 1;
+  visibility: visible;
 }
 
 button#reload {
