--- a/vision.css
+++ b/vision.css
@@ -5,8 +5,10 @@
   --fg: #fff;
   --ctrlbg: #222;
   --highlight: #0ff;
-  --tranared: #f00;
-  --tranagreen: #03f;
+/*  --tranared: #f00;
+  --tranagreen: #03f;*/
+--tranared: #03f;
+    --tranagreen: #f00;
   --trackred: var(--fg);
   --trackredbg: #ff0000;
   --homefilter: saturate(0) brightness(100);
@@ -18,8 +20,7 @@
     --fg: #000;
     --ctrlbg: #ddf;
     --highlight: #099;
-    --tranared: #0ff;
-    --tranagreen: #f00;
+    
     --trackred: #f00;
     --trackredbg: var(--bg);
     --homefilter: brightness(0);
@@ -31,8 +32,8 @@
   --fg: #000;
   --ctrlbg: #ddf;
   --highlight: #099;
-  --tranared: #0ff;
-  --tranagreen: #f00;
+  /*--tranared: #0ff;
+  --tranagreen: #f00;*/
   --trackred: #f00;
   --trackredbg: var(--bg);
   --homefilter: brightness(0);
