--- a/vision.css
+++ b/vision.css
@@ -3,18 +3,34 @@
   --fontsize: var(--basefont);
 }
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   :root {
     --bg: #fff;
     --fg: #000;
     --ctrlbg: #ddf;
     --highlight: #099;
-    
+    --tranared: #03f;
+    --tranagreen: #f00;
     --trackred: #f00;
     --trackredbg: var(--bg);
     --homefilter: brightness(0);
   }
-} */
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: #000;
+    --fg: #fff;
+    --ctrlbg: #222;
+    --highlight: #0ff;
+    --tranared: #03f;
+    --tranagreen: #f00;
+    --trackred: var(--fg);
+    --trackredbg: #ff0000;
+    --homefilter: saturate(0) brightness(100);
+  }
+}
+
 [data-theme="light"] {
   --bg: #fff;
   --fg: #000;
