--- a/vision.css
+++ b/vision.css
@@ -38,6 +38,7 @@
   --highlight: #099;
   --tranared: #03f;
   --tranagreen: #f00;
+  --spotbg: var(--tranagreen);
   --trackred: #f00;
   --trackredbg: var(--bg);
   --homefilter: brightness(0);
@@ -49,6 +50,7 @@
   --ctrlbg: #222;
   --highlight: #0ff;
   --tranared: #03f;
+  --spotbg: var(--tranared);
   --tranagreen: #f00;
   --trackred: var(--fg);
   --trackredbg: #ff0000;
