remove @media based color declarations

--- a/vision.css
+++ b/vision.css
@@ -2,7 +2,7 @@
   --basefont: 7;
   --fontsize: var(--basefont);
 }
-
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     --bg: #fff;
@@ -29,7 +29,7 @@
     --trackredbg: #ff0000;
     --homefilter: saturate(0) brightness(100);
   }
-}
+} */
 
 [data-theme="light"] {
   --bg: #fff;
