--- a/css/vision.css
+++ b/css/vision.css
@@ -75,21 +75,29 @@ a {
   & #ctrlsettings {
     position: relative;
     user-select: none;
+    width: 3em;
     #ctrlset {
       display: none;
-      &:checked ~ label::after {
+      + label {
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        cursor: pointer;
+        &:hover img {
+          filter: brightness(0.5);
+        }
+      }
+      &:checked + label img {
+        filter: brightness(0.5);
+      }
+      &:checked + label::after {
         content: "";
         display: block;
         position: fixed;
         inset: 0;
         background: transparent;
-      }
-    }
-
-    > label img {
-      cursor: pointer;
-      &:hover {
-        filter: brightness(0.5);
+        cursor: default;
       }
     }
 
